--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,63 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+#containerDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    justify-content: flex-start;
+}
+#pole {
+    background-color: black;
+    width: 20px;
+    height: 30vh;
+}
+#lights {
+    background-color: black;
+    width: 150px;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.circleGreen {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: green;
+}
+.circleYellow {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: yellow;
+}
+.circleRed {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: red;
+}
+.selected {
+    box-shadow: 0 0 5px #facf4e,
+                0 0 10px #facf4e,
+                0 0 15px #facf4e,
+                0 0 20px #facf4e,
+                0 0 25px #facf4e,
+                0 0 35px #facf4e,
+                0 0 50px #facf4e;
+}
+button {
+/* Resetting styles */
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+    outline: none;
+/* Custom styles */
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
